# ValaOnWindows

./: README.md
gtk_app/: deploy.sh  main.vala  meson.build
vala_hello/: deploy.sh  main.vala  meson.build
